--- a/api/pom.xml
+++ b/api/pom.xml
@@ -54,5 +54,15 @@
             <artifactId>hutool-all</artifactId>
             <version>5.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>2.11.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>2.11.1</version>
+        </dependency>
     </dependencies>
 </project>
