--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>goods</module>
-        <module>order</module>
+        <module>client</module>
+        <module>server</module>
         <module>api</module>
     </modules>
     <dependencyManagement>
