--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>com.sjl</groupId>
     <artifactId>netty-rpc</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>goods</module>
-        <module>order</module>
+        <module>client</module>
+        <module>service</module>
         <module>api</module>
+        <module>rpc-context</module>
     </modules>
     <dependencyManagement>
         <dependencies>
