refactor(deps): 优化

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
         <module>api</module>
         <module>rpc-context</module>
     </modules>
+    <dependencies>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
+    </dependencies>
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -26,6 +32,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>1.2.62</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>5.4.5</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
