--- a/rpc-context/pom.xml
+++ b/rpc-context/pom.xml
@@ -134,5 +134,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.10.11</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
